# cs261

./: .gitignore  CMakeLists.txt  README.md  my_utils.cpp  my_utils.h  script.py  simple_test.cpp  tests.cpp  tests.h
src/: 1_integer_dot_product.cpp  2_float_dot_product.cpp  3_float_matrix_vector.cpp  4_packed_matrix_vector.cpp  5_timed_packed_products.cpp  float_dot_product.cpp  float_matrix_vector.cpp  integer_dot_product.cpp  my_utils.cpp  my_utils.h  tests.cpp  tests.h
